--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
+    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@fortawesome/free-brands-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -33,6 +36,8 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "normalize.css": "^8.0.1",
