--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev-server": "webpack-dev-server"
+    "heroku-postbuild": "npm run build:prod",
+    "build:prod": "webpack -p --env production",
+    "build:dev": "webpack --mode=development",
+    "dev-server": "webpack-dev-server",
+    "start": "node server/server.js"
   },
   "repository": {
     "type": "git",
@@ -22,14 +26,14 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
-    "@fortawesome/fontawesome-free": "^5.9.0",
-    "@fortawesome/free-brands-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
     "css-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
+    "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
+    "react-dom": "^16.9.0",
     "react-icons": "^3.7.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
@@ -38,13 +42,6 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "bootstrap": "^4.3.1",
-    "jquery": "^3.4.1",
-    "normalize.css": "^8.0.1",
-    "popper.js": "^1.15.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "express": "^4.17.1"
   }
 }
