--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-preset-minify": "^0.5.1",
     "bootstrap": "^4.3.1",
     "css-loader": "^3.0.0",
     "mini-css-extract-plugin": "^0.7.0",
@@ -42,6 +43,7 @@
     "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
+    "compression": "^1.7.4",
     "express": "^4.17.1"
   }
 }
